<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TubeTube</string>
    <string name="nav_home">Home</string>
    <string name="nav_shorts">Shorts</string>
    <string name="nav_search">Search</string>
    <string name="nav_subscriptions">Subscriptions</string>
    <string name="nav_library">Library</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_account">Account</string>
    <string name="chip_all">All</string>
    <string name="search_hint">Search videos</string>
    <string name="suggestions">Up next</string>
    <string name="quality">Quality</string>
    <string name="speed">Speed</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="exit_fullscreen">Exit</string>
    <string name="video_fit">Fit</string>
    <string name="video_fill">Fill</string>
    <string name="video_more">More</string>
    <string name="shorts_swipe_hint">Swipe up for next</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="done">Done</string>
    <string name="signin_phone_description">On your phone or computer, open youtube.com/tv/activate and enter this code. Or tap Open in browser to sign in here.</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading…</string>
    <string name="no_content">Nothing here yet</string>
    <string name="sections">Sections</string>
    <string name="mini_player">Mini player</string>
    <string name="mini_player_play">Play or pause</string>
    <string name="mini_player_close">Close mini player</string>
    <string name="comments">Comments</string>
    <string name="comments_unavailable">Comments are not available</string>
    <string name="action_like">Like</string>
    <string name="action_share">Share</string>
    <string name="action_watch_later">Watch later</string>
    <string name="action_download">Download</string>
    <string name="action_cast">Link TV</string>
    <string name="subtitles">Captions</string>
    <string name="downloads">Downloads</string>
    <string name="download_started">Download started</string>
    <string name="download_unavailable">No downloadable stream for this video</string>
    <string name="watch_later_added">Saved to Watch later</string>
    <string name="seek_forward">+10</string>
    <string name="seek_back">-10</string>
</resources>
